<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="dev.justme.busket.auth.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            />

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="dev.justme.busket.auth.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            />

        <action
            android:id="@+id/action_RegisterFragment_to_HomeFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="dev.justme.busket.me.list.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_HomeFragment_to_DetailedListView"
            app:destination="@id/DetailedListView" />
        <action
            android:id="@+id/action_HomeFragment_to_Settings"
            app:destination="@id/Settings" />
    </fragment>

    <fragment
        android:id="@+id/DetailedListView"
        android:name="dev.justme.busket.me.list.details.DetailedListView"
        android:label="@string/loading"
        tools:layout="@layout/fragment_detailed_list_view">
        <action
            android:id="@+id/action_DetailedListView_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_DetailedListView_to_WhitelistedUsersFragment"
            app:destination="@id/WhitelistedUsersFragment" />
    </fragment>

    <fragment
        android:id="@+id/WhitelistedUsersFragment"
        android:name="dev.justme.busket.me.list.details.whitelisted.WhitelistedUsersFragment"
        android:label="@string/loading"
        tools:layout="@layout/fragment_whitelisted_users">
        <action
            android:id="@+id/action_WhitelistedUsersFragment_to_DetailedListView"
            app:destination="@id/DetailedListView" />
    </fragment>

    <fragment
        android:id="@+id/Settings"
        android:name="dev.justme.busket.me.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_Settings_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>